// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddRecipient should render 1`] = `
<div>
  <div
    class="AddRecipientstyles__AddRecipientWrapper-cy4ht8-0 HduBv"
  >
    <div
      class="text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="flex items-center mb-2 space-x-2"
      >
        <div
          class="font-normal transition-colors duration-100 text-md"
        >
          Select a Single or Multiple Recipient Transaction
        </div>
        <div>
          <div
            class="rounded-full cursor-pointer text-theme-primary-600 hover:text-theme-primary-100 questionmark"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                questionmark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-stretch select-buttons"
      >
        <button
          class="flex-1 Button__StyledButton-mdtvtf-0 dznQvQ"
          data-testid="AddRecipient__single"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Single
          </div>
        </button>
        <button
          class="flex-1 border-l-0 Button__StyledButton-mdtvtf-0 eJuaWR"
          data-testid="AddRecipient__multi"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Multiple
          </div>
        </button>
      </div>
    </div>
    <div
      class="mt-6 SubForm__SubFormWrapper-c4tqfs-0 gaoeoe"
    >
      <div
        class="space-y-8"
      >
        <fieldset
          class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
        >
          <label
            class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
            data-testid="FormLabel"
            for="recipientAddress"
          >
            Recipient
            <div
              class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div>
            <div
              class="flex relative items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="absolute left-1"
              >
                <div
                  class="mx-3 Circle-uw7h4j-0 blBpcG bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
                />
              </div>
              <input
                class="overflow-hidden py-3 px-4 pr-11 pl-14 w-full rounded border transition-colors duration-200 appearance-none Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures"
                data-testid="SelectRecipient__input"
                name="recipientAddress"
                type="text"
                value=""
              />
              <div
                class="flex absolute right-4 items-center space-x-3 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600"
                data-testid="SelectRecipient__select-recipient"
              >
                <div
                  class="sc-bdfBwQ iyevwF"
                  height="20"
                  width="20"
                >
                  <svg>
                    user.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
        >
          <label
            class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
            data-testid="FormLabel"
            for="amount"
          >
            Amount
            <div
              class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div
            class="InputGroup-sc-1obbdqe-3 bgPpWR"
          >
            <input
              class="overflow-hidden py-3 px-4 pr-20 w-full rounded border transition-colors duration-200 appearance-none Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures"
              data-testid="AddRecipient__amount"
              name="amount"
              placeholder="Amount"
              type="text"
              value=""
            />
            <div
              class="InputGroup__InputAddon-sc-1obbdqe-0 InputGroup__InputAddonEnd-sc-1obbdqe-2 bsvVEG isvHuV"
            >
              <button
                class="pr-3 pl-6 mr-1 h-12 font-medium text-theme-primary-600 focus:outline-none"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should render with multiple recipients tab 1`] = `
<div>
  <div
    class="AddRecipientstyles__AddRecipientWrapper-cy4ht8-0 HduBv"
  >
    <div
      class="text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="flex items-center mb-2 space-x-2"
      >
        <div
          class="font-normal transition-colors duration-100 text-md"
        >
          Select a Single or Multiple Recipient Transaction
        </div>
        <div>
          <div
            class="rounded-full cursor-pointer text-theme-primary-600 hover:text-theme-primary-100 questionmark"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                questionmark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-stretch select-buttons"
      >
        <button
          class="flex-1 Button__StyledButton-mdtvtf-0 eJuaWR"
          data-testid="AddRecipient__single"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Single
          </div>
        </button>
        <button
          class="flex-1 border-l-0 Button__StyledButton-mdtvtf-0 dznQvQ"
          data-testid="AddRecipient__multi"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Multiple
          </div>
        </button>
      </div>
    </div>
    <div
      class="mt-6 SubForm__SubFormWrapper-c4tqfs-0 lkacNM"
    >
      <div
        class="space-y-8"
      >
        <fieldset
          class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
        >
          <label
            class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
            data-testid="FormLabel"
            for="recipientAddress"
          >
            Recipient #1
            <div
              class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div>
            <div
              class="flex relative items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="absolute left-1"
              >
                <div
                  class="mx-3 Circle-uw7h4j-0 blBpcG bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
                />
              </div>
              <input
                class="overflow-hidden py-3 px-4 pr-11 pl-14 w-full rounded border transition-colors duration-200 appearance-none Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures"
                data-testid="SelectRecipient__input"
                name="recipientAddress"
                type="text"
                value=""
              />
              <div
                class="flex absolute right-4 items-center space-x-3 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600"
                data-testid="SelectRecipient__select-recipient"
              >
                <div
                  class="sc-bdfBwQ iyevwF"
                  height="20"
                  width="20"
                >
                  <svg>
                    user.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
        >
          <label
            class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
            data-testid="FormLabel"
            for="amount"
          >
            Amount
            <div
              class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div
            class="InputGroup-sc-1obbdqe-3 bgPpWR"
          >
            <input
              class="overflow-hidden py-3 px-4 pr-20 w-full rounded border transition-colors duration-200 appearance-none Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures"
              data-testid="AddRecipient__amount"
              name="amount"
              placeholder="Amount"
              type="text"
              value=""
            />
            <div
              class="InputGroup__InputAddon-sc-1obbdqe-0 InputGroup__InputAddonEnd-sc-1obbdqe-2 bsvVEG isvHuV"
            >
              <button
                class="pr-3 pl-6 mr-1 h-12 font-medium text-theme-primary-600 focus:outline-none"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should render with single recipient data 1`] = `
<div>
  <div
    class="AddRecipientstyles__AddRecipientWrapper-cy4ht8-0 HduBv"
  >
    <div
      class="text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="flex items-center mb-2 space-x-2"
      >
        <div
          class="font-normal transition-colors duration-100 text-md"
        >
          Select a Single or Multiple Recipient Transaction
        </div>
        <div>
          <div
            class="rounded-full cursor-pointer text-theme-primary-600 hover:text-theme-primary-100 questionmark"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                questionmark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-stretch select-buttons"
      >
        <button
          class="flex-1 Button__StyledButton-mdtvtf-0 dznQvQ"
          data-testid="AddRecipient__single"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Single
          </div>
        </button>
        <button
          class="flex-1 border-l-0 Button__StyledButton-mdtvtf-0 eJuaWR"
          data-testid="AddRecipient__multi"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Multiple
          </div>
        </button>
      </div>
    </div>
    <div
      class="mt-6 SubForm__SubFormWrapper-c4tqfs-0 gaoeoe"
    >
      <div
        class="space-y-8"
      >
        <fieldset
          class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
        >
          <label
            class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
            data-testid="FormLabel"
            for="recipientAddress"
          >
            Recipient
            <div
              class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div>
            <div
              class="flex relative items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="absolute left-1"
              >
                <div
                  class="mx-3 Avatar__AvatarWrapper-sc-1vsy2s2-0 kvvaRs"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"50\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"40\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                      title="D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax"
                    />
                  </div>
                </div>
              </div>
              <input
                class="overflow-hidden py-3 px-4 pr-11 pl-14 w-full rounded border transition-colors duration-200 appearance-none Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures"
                data-testid="SelectRecipient__input"
                name="recipientAddress"
                type="text"
                value="D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax"
              />
              <div
                class="flex absolute right-4 items-center space-x-3 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600"
                data-testid="SelectRecipient__select-recipient"
              >
                <div
                  class="sc-bdfBwQ iyevwF"
                  height="20"
                  width="20"
                >
                  <svg>
                    user.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
        >
          <label
            class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
            data-testid="FormLabel"
            for="amount"
          >
            Amount
            <div
              class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div
            class="InputGroup-sc-1obbdqe-3 bgPpWR"
          >
            <input
              class="overflow-hidden py-3 px-4 pr-20 w-full rounded border transition-colors duration-200 appearance-none Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures"
              data-testid="AddRecipient__amount"
              name="amount"
              placeholder="Amount"
              type="text"
              value="1"
            />
            <div
              class="InputGroup__InputAddon-sc-1obbdqe-0 InputGroup__InputAddonEnd-sc-1obbdqe-2 bsvVEG isvHuV"
            >
              <button
                class="pr-3 pl-6 mr-1 h-12 font-medium text-theme-primary-600 focus:outline-none"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should render without recipients 1`] = `
<div>
  <div
    class="AddRecipientstyles__AddRecipientWrapper-cy4ht8-0 HduBv"
  >
    <div
      class="text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="flex items-center mb-2 space-x-2"
      >
        <div
          class="font-normal transition-colors duration-100 text-md"
        >
          Select a Single or Multiple Recipient Transaction
        </div>
        <div>
          <div
            class="rounded-full cursor-pointer text-theme-primary-600 hover:text-theme-primary-100 questionmark"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                questionmark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-stretch select-buttons"
      >
        <button
          class="flex-1 Button__StyledButton-mdtvtf-0 dznQvQ"
          data-testid="AddRecipient__single"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Single
          </div>
        </button>
        <button
          class="flex-1 border-l-0 Button__StyledButton-mdtvtf-0 eJuaWR"
          data-testid="AddRecipient__multi"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Multiple
          </div>
        </button>
      </div>
    </div>
    <div
      class="mt-6 SubForm__SubFormWrapper-c4tqfs-0 gaoeoe"
    >
      <div
        class="space-y-8"
      >
        <fieldset
          class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
        >
          <label
            class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
            data-testid="FormLabel"
            for="recipientAddress"
          >
            Recipient
            <div
              class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div>
            <div
              class="flex relative items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="absolute left-1"
              >
                <div
                  class="mx-3 Circle-uw7h4j-0 blBpcG bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
                />
              </div>
              <input
                class="overflow-hidden py-3 px-4 pr-11 pl-14 w-full rounded border transition-colors duration-200 appearance-none Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures"
                data-testid="SelectRecipient__input"
                name="recipientAddress"
                type="text"
                value=""
              />
              <div
                class="flex absolute right-4 items-center space-x-3 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600"
                data-testid="SelectRecipient__select-recipient"
              >
                <div
                  class="sc-bdfBwQ iyevwF"
                  height="20"
                  width="20"
                >
                  <svg>
                    user.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
        >
          <label
            class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
            data-testid="FormLabel"
            for="amount"
          >
            Amount
            <div
              class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div
            class="InputGroup-sc-1obbdqe-3 bgPpWR"
          >
            <input
              class="overflow-hidden py-3 px-4 pr-20 w-full rounded border transition-colors duration-200 appearance-none Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures"
              data-testid="AddRecipient__amount"
              name="amount"
              placeholder="Amount"
              type="text"
              value=""
            />
            <div
              class="InputGroup__InputAddon-sc-1obbdqe-0 InputGroup__InputAddonEnd-sc-1obbdqe-2 bsvVEG isvHuV"
            >
              <button
                class="pr-3 pl-6 mr-1 h-12 font-medium text-theme-primary-600 focus:outline-none"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should render without the single & multiple tabs 1`] = `
<div>
  <div
    class="AddRecipientstyles__AddRecipientWrapper-cy4ht8-0 HduBv"
  >
    <div
      class="SubForm__SubFormWrapper-c4tqfs-0 gaoeoe"
    >
      <div
        class="space-y-8"
      >
        <fieldset
          class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
        >
          <label
            class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
            data-testid="FormLabel"
            for="recipientAddress"
          >
            Recipient
            <div
              class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div>
            <div
              class="flex relative items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="absolute left-1"
              >
                <div
                  class="mx-3 Circle-uw7h4j-0 blBpcG bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
                />
              </div>
              <input
                class="overflow-hidden py-3 px-4 pr-11 pl-14 w-full rounded border transition-colors duration-200 appearance-none Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures"
                data-testid="SelectRecipient__input"
                name="recipientAddress"
                type="text"
                value=""
              />
              <div
                class="flex absolute right-4 items-center space-x-3 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600"
                data-testid="SelectRecipient__select-recipient"
              >
                <div
                  class="sc-bdfBwQ iyevwF"
                  height="20"
                  width="20"
                >
                  <svg>
                    user.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
        >
          <label
            class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
            data-testid="FormLabel"
            for="amount"
          >
            Amount
            <div
              class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div
            class="InputGroup-sc-1obbdqe-3 bgPpWR"
          >
            <input
              class="overflow-hidden py-3 px-4 pr-20 w-full rounded border transition-colors duration-200 appearance-none Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures"
              data-testid="AddRecipient__amount"
              name="amount"
              placeholder="Amount"
              type="text"
              value=""
            />
            <div
              class="InputGroup__InputAddon-sc-1obbdqe-0 InputGroup__InputAddonEnd-sc-1obbdqe-2 bsvVEG isvHuV"
            >
              <button
                class="pr-3 pl-6 mr-1 h-12 font-medium text-theme-primary-600 focus:outline-none"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should set available amount 1`] = `
<div>
  <div
    class="AddRecipientstyles__AddRecipientWrapper-cy4ht8-0 HduBv"
  >
    <div
      class="text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="flex items-center mb-2 space-x-2"
      >
        <div
          class="font-normal transition-colors duration-100 text-md"
        >
          Select a Single or Multiple Recipient Transaction
        </div>
        <div>
          <div
            class="rounded-full cursor-pointer text-theme-primary-600 hover:text-theme-primary-100 questionmark"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                questionmark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-stretch select-buttons"
      >
        <button
          class="flex-1 Button__StyledButton-mdtvtf-0 dznQvQ"
          data-testid="AddRecipient__single"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Single
          </div>
        </button>
        <button
          class="flex-1 border-l-0 Button__StyledButton-mdtvtf-0 eJuaWR"
          data-testid="AddRecipient__multi"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Multiple
          </div>
        </button>
      </div>
    </div>
    <div
      class="mt-6 SubForm__SubFormWrapper-c4tqfs-0 gaoeoe"
    >
      <div
        class="space-y-8"
      >
        <fieldset
          class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
        >
          <label
            class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
            data-testid="FormLabel"
            for="recipientAddress"
          >
            Recipient
            <div
              class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div>
            <div
              class="flex relative items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="absolute left-1"
              >
                <div
                  class="mx-3 Circle-uw7h4j-0 blBpcG bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
                />
              </div>
              <input
                class="overflow-hidden py-3 px-4 pr-11 pl-14 w-full rounded border transition-colors duration-200 appearance-none Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures"
                data-testid="SelectRecipient__input"
                name="recipientAddress"
                type="text"
                value=""
              />
              <div
                class="flex absolute right-4 items-center space-x-3 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600"
                data-testid="SelectRecipient__select-recipient"
              >
                <div
                  class="sc-bdfBwQ iyevwF"
                  height="20"
                  width="20"
                >
                  <svg>
                    user.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
        >
          <label
            class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
            data-testid="FormLabel"
            for="amount"
          >
            Amount
            <div
              class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div
            class="InputGroup-sc-1obbdqe-3 bgPpWR"
          >
            <input
              class="overflow-hidden py-3 px-4 pr-20 w-full rounded border transition-colors duration-200 appearance-none Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures"
              data-testid="AddRecipient__amount"
              name="amount"
              placeholder="Amount"
              type="text"
              value=""
            />
            <div
              class="InputGroup__InputAddon-sc-1obbdqe-0 InputGroup__InputAddonEnd-sc-1obbdqe-2 bsvVEG isvHuV"
            >
              <button
                class="pr-3 pl-6 mr-1 h-12 font-medium text-theme-primary-600 focus:outline-none"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient should show zero amount if wallet has zero or insufficient balance 1`] = `
<div>
  <div
    class="AddRecipientstyles__AddRecipientWrapper-cy4ht8-0 HduBv"
  >
    <div
      class="text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="flex items-center mb-2 space-x-2"
      >
        <div
          class="font-normal transition-colors duration-100 text-md"
        >
          Select a Single or Multiple Recipient Transaction
        </div>
        <div>
          <div
            class="rounded-full cursor-pointer text-theme-primary-600 hover:text-theme-primary-100 questionmark"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              height="20"
              width="20"
            >
              <svg>
                questionmark.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-stretch select-buttons"
      >
        <button
          class="flex-1 Button__StyledButton-mdtvtf-0 dznQvQ"
          data-testid="AddRecipient__single"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Single
          </div>
        </button>
        <button
          class="flex-1 border-l-0 Button__StyledButton-mdtvtf-0 eJuaWR"
          data-testid="AddRecipient__multi"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            Multiple
          </div>
        </button>
      </div>
    </div>
    <div
      class="mt-6 SubForm__SubFormWrapper-c4tqfs-0 gaoeoe"
    >
      <div
        class="space-y-8"
      >
        <fieldset
          class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
        >
          <label
            class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
            data-testid="FormLabel"
            for="recipientAddress"
          >
            Recipient
            <div
              class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div>
            <div
              class="flex relative items-center w-full text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="absolute left-1"
              >
                <div
                  class="mx-3 Circle-uw7h4j-0 blBpcG bg-theme-secondary-200 dark:bg-theme-secondary-700 border-theme-secondary-200 dark:border-theme-secondary-700"
                />
              </div>
              <input
                class="overflow-hidden py-3 px-4 pr-11 pl-14 w-full rounded border transition-colors duration-200 appearance-none Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures"
                data-testid="SelectRecipient__input"
                name="recipientAddress"
                type="text"
                value=""
              />
              <div
                class="flex absolute right-4 items-center space-x-3 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600"
                data-testid="SelectRecipient__select-recipient"
              >
                <div
                  class="sc-bdfBwQ iyevwF"
                  height="20"
                  width="20"
                >
                  <svg>
                    user.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="flex flex-col space-y-2 FormField__FormFieldStyled-yeauwd-0 cnlnjc"
        >
          <label
            class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
            data-testid="FormLabel"
            for="amount"
          >
            Amount
            <div
              class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div
            class="InputGroup-sc-1obbdqe-3 bgPpWR"
          >
            <input
              class="overflow-hidden py-3 px-4 pr-20 w-full rounded border transition-colors duration-200 appearance-none Input__InputStyled-wu99qs-0 eVdxgh bg-theme-background border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text no-ligatures"
              data-testid="AddRecipient__amount"
              name="amount"
              placeholder="Amount"
              type="text"
              value=""
            />
            <div
              class="InputGroup__InputAddon-sc-1obbdqe-0 InputGroup__InputAddonEnd-sc-1obbdqe-2 bsvVEG isvHuV"
            >
              <button
                class="pr-3 pl-6 mr-1 h-12 font-medium text-theme-primary-600 focus:outline-none"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;
